# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  työaika.txt
data/: yatzy.db
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md  yatzypohdintaa
laskarit/viikko1/: epasynkroni.txt  gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_interface.py  die.py  main.py  player.py  scorecard.py  test.py  yatzy.py
src/entities/: click_handler.py  die.py  drawer.py  player.py  result_checker.py  scorecard.py
src/resources/: clickable_result_names.py  coordinates.py  y_positions_of_result_boxes.py
src/tests/: test_click_handler.py  test_die.py  test_player.py  test_result_checker.py  test_yatzy.py
